--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@
 SERVER_PORT=
 
 # Mysql config
-DB_HOST=
-DB_PORT=
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
 DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
