--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mysql2": "^3.3.5",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.32.1"
   }
 }
